create button and path update

--- a/src/test/resources/Config/config.properties
+++ b/src/test/resources/Config/config.properties
@@ -2,5 +2,5 @@ browser=chrome
 url=https://qa.services.bluebrix.healthcare/mf/platform
 username=test.account@blueehr.com
 password= Qwert@1234
-incognito= false 
+incognito= true 
 headless= false
